Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115149

Unwanted highlight of arrows in tree view when hovering with mouse

    XMLWordPrintable

Details

    • d35e8ad75 (dev), 2a748c164 (6.6), 154a2757e (6.5)

    Description

      The attached code is a slightly modified version of the editabletreemodel sample found in src/qtbase/examples/widgets/itemviews.
      Modification done: A style sheet has been added to mainwindow.cpp.

      Hovering over the arrow for expanding/collapsing elements in the tree view or the blank space if the tree item has been expanded causes the arrow or blank space to be highlighted when it shouldn't be, and that hightlighting doesn't always clear when it should.

      If you try to build this sample code using Qt 5.15.12, everything works fine.

      Steps to reproduce:
      1) build and run the attached example with Qt 6.2.7 or higher version (6.5.1)
      2) hover over the arrow for expanding/collapsing elements in the tree view or the blank space

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            axelspoerl Axel Spoerl
            chakib Chakib Boutaghane
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews