src/widgets/itemviews/qabstractitemview.cpp
@@ -129,8 +129,8 @@ void QAbstractItemViewPrivate::setHoverIndex(const QPersistentModelIndex &index)
         q->update(hover); //update the old one
         q->update(index); //update the new one
     } else {
-        QRect oldHoverRect = q->visualRect(hover);
-        QRect newHoverRect = q->visualRect(index);
+        const QRect oldHoverRect = visualRect(hover);
+        const QRect newHoverRect = visualRect(index);
         viewport->update(QRect(0, newHoverRect.y(), viewport->width(), newHoverRect.height()));
         viewport->update(QRect(0, oldHoverRect.y(), viewport->width(), oldHoverRect.height()));
     }
@@ -3346,7 +3346,7 @@ void QAbstractItemView::update(const QModelIndex &index)
 {
     Q_D(QAbstractItemView);
     if (index.isValid()) {
-        const QRect rect = visualRect(index);
+        const QRect rect = d->visualRect(index);
         //this test is important for performance reason
         //For example in dataChanged we simply update all the cells without checking
         //it can be a major bottleneck to update rects that aren't even part of the viewport
